introduction of service and its test

--- a/app/index.html
+++ b/app/index.html
@@ -10,5 +10,6 @@
     <script src="lib/angular.js"></script>
     <script src="script/app.js"></script>
     <script src="script/controllers/productCtrl.js"></script>
+    <script src="script/services/products.js"></script>
   </body>
 </html>
