adds poller generic service in callback style

--- a/app/index.html
+++ b/app/index.html
@@ -5,11 +5,12 @@
     <title>Amazony</title>
   </head>
   <body ng-app="Amazony">
+    <a href="#amazony">Amazony</a> | <a href="#ebai">Ebai</a>
     <div ng-view></div>
 
     <script src="lib/angular.js"></script>
     <script src="script/app.js"></script>
     <script src="script/controllers/productCtrl.js"></script>
-    <script src="script/services/products.js"></script>
+    <script src="script/services/poller.js"></script>
   </body>
 </html>
